<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/contentHolderCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeColor="@color/blanco_palido"
            app:strokeWidth="1dp"
            app:cardElevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:contentPadding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:checkable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="Visitado"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/visitadoHolder"
                    android:textStyle="italic"
                    app:layout_constraintTop_toTopOf="@+id/botonVisitadoHolder"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/botonVisitadoHolder"
                    app:layout_constraintStart_toStartOf="@+id/nombreCiudadHolder"
                    app:layout_constraintEnd_toStartOf="@+id/botonVisitadoHolder" />

            <ImageView
                    app:circularflow_radiusInDP="30dp"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:src="@drawable/paris"
                    android:id="@+id/imagenCiudadHolder"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/app_name"
                    tools:ignore="ImageContrastCheck"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:scaleType="centerCrop" />

            <TextView
                    android:text="@string/malaga"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/nombreCiudadHolder"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/botonVisitadoHolder" />

            <TextView
                    android:text="@string/espa_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/paisCiudadHolder"
                    android:textSize="15sp"
                    android:fontFamily="@font/roboto"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/nombreCiudadHolder"
                    app:layout_constraintEnd_toEndOf="@+id/nombreCiudadHolder"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/nombreCiudadHolder" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    app:fabCustomSize="40dp"
                    app:tint="@android:color/white"
                    android:id="@+id/botonVisitadoHolder"
                    app:srcCompat="@drawable/ic_baseline_card_travel_24"
                    app:maxImageSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:clickable="true"
                    app:layout_constraintTop_toBottomOf="@+id/imagenCiudadHolder"
                    android:focusable="true"
                    android:layout_marginTop="8dp"
                    android:contentDescription="TODO"
                    app:layout_constraintEnd_toStartOf="@+id/botonEditarHolder" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    app:fabCustomSize="40dp"
                    app:tint="@android:color/white"
                    android:backgroundTint="@color/md_theme_secondary"
                    android:id="@+id/botonEditarHolder"
                    app:srcCompat="@drawable/ic_baseline_edit_24"
                    app:maxImageSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imagenCiudadHolder"
                    android:focusable="true"
                    android:layout_marginTop="8dp"
                    android:contentDescription="TODO" />

            <TextView
                    android:text="Distacia:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/paisCiudadHolder"
                    app:layout_constraintStart_toStartOf="@+id/paisCiudadHolder"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" />

            <TextView
                    android:text="1300 km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/distanciaHolderCiudad"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5"
                    android:layout_marginStart="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>